tests/ui/macros/macro-metavar-expr-concat/syntax-errors.stderr
error: invalid unicode character escape
  --> $DIR/syntax-errors.rs:55:23
   |
LL |         let ${concat("\u{999999}", $ident)}: () = ();
   |                       ^^^^^^^^^^ invalid escape
   |
   = help: unicode escape must be at most 10FFFF

error: invalid unicode character escape
  --> $DIR/syntax-errors.rs:76:31
   |
LL |         let ${concat($ident, "\u{999999}")}: () = ();
   |                               ^^^^^^^^^^ invalid escape
   |
   = help: unicode escape must be at most 10FFFF

error: expected identifier or literal
  --> $DIR/syntax-errors.rs:5:10
   |
LL |         ${concat()}
   |          ^^^^^^^^^^

error: `concat` must have at least two elements
  --> $DIR/syntax-errors.rs:8:11
   |
LL |         ${concat(aaaa)}
   |           ^^^^^^

error: expected identifier or literal
  --> $DIR/syntax-errors.rs:11:10
   |
LL |         ${concat(aaaa,)}
   |          ^^^^^^^^^^^^^^^

error: expected comma
  --> $DIR/syntax-errors.rs:16:10
   |
LL |         ${concat(aaaa aaaa)}
   |          ^^^^^^^^^^^^^^^^^^^

error: `concat` must have at least two elements
  --> $DIR/syntax-errors.rs:19:11
   |
LL |         ${concat($ex)}
   |           ^^^^^^

error: expected comma
  --> $DIR/syntax-errors.rs:25:10
   |
LL |         ${concat($ex, aaaa 123)}
   |          ^^^^^^^^^^^^^^^^^^^^^^^

error: expected identifier or literal
  --> $DIR/syntax-errors.rs:28:10
   |
LL |         ${concat($ex, aaaa,)}
   |          ^^^^^^^^^^^^^^^^^^^^

error: expected identifier, found `"\u{999999}"`
  --> $DIR/syntax-errors.rs:55:22
   |
LL |         let ${concat("\u{999999}", $ident)}: () = ();
   |                      ^^^^^^^^^^^^ help: try removing `"\u{999999}"`

error: expected identifier, found `"\u{999999}"`
  --> $DIR/syntax-errors.rs:76:30
   |
LL |         let ${concat($ident, "\u{999999}")}: () = ();
   |                              ^^^^^^^^^^^^ help: try removing `"\u{999999}"`

error: `${concat(..)}` currently only accepts identifiers or meta-variables as parameters
  --> $DIR/syntax-errors.rs:22:19
   |
LL |         ${concat($ex, aaaa)}
   |                   ^^

error: variable `foo` is not recognized in meta-variable expression
  --> $DIR/syntax-errors.rs:35:30
   |
LL |         const ${concat(FOO, $foo)}: i32 = 2;
   |                              ^^^

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/syntax-errors.rs:42:14
   |
LL |         let ${concat(1, $ident)}: () = ();
   |              ^^^^^^^^^^^^^^^^^^^
...
LL |     starting_number!(_abc);
   |     ---------------------- in this macro invocation
   |
   = note: this error originates in the macro `starting_number` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `$`
  --> $DIR/syntax-errors.rs:55:13
   |
LL |         let ${concat("\u{999999}", $ident)}: () = ();
   |             ^ expected pattern
...
LL |     starting_invalid_unicode!(_abc);
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `starting_invalid_unicode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `$`
  --> $DIR/syntax-errors.rs:76:13
   |
LL |         let ${concat($ident, "\u{999999}")}: () = ();
   |             ^ expected pattern
...
LL |     ending_invalid_unicode!(_abc);
   |     ----------------------------- in this macro invocation
   |
   = note: this error originates in the macro `ending_invalid_unicode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/syntax-errors.rs:85:14
   |
LL |         let ${concat("", "")}: () = ();
   |              ^^^^^^^^^^^^^^^^
...
LL |     empty!();
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `empty` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 17 previous errors

